--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.3",
     "expo": "~49.0.15",
     "expo-cli": "^6.3.10",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-paper": "^5.11.4"
+    "react-dom": "^18.2.0",
+    "react-native": "^0.72.6",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-paper": "^5.11.4",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
