--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "expo": "~49.0.15",
     "expo-cli": "^6.3.10",
     "expo-image-picker": "~14.3.2",
+    "expo-location": "^16.5.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.72.6",
+    "react-native": "^0.72.10",
     "react-native-image-picker": "^7.1.0",
+    "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
