--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.3",
     "expo": "~49.0.15",
     "expo-cli": "^6.3.10",
+    "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
     "expo-location": "^16.5.2",
     "expo-status-bar": "~1.6.0",
@@ -24,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-native": "^0.72.10",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-image-picker": "^7.1.0",
     "react-native-maps": "1.7.1",
     "react-native-maps-directions": "^1.9.0",
