--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
+    "@react-icons/all-files": "^4.1.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -23,12 +25,14 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-native": "^0.72.10",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-image-picker": "^7.1.0",
-    "react-native-maps": "1.7.1",
+    "react-native-maps": "^1.10.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-web": "^0.19.10",
