--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-image-picker": "~14.3.2",
     "expo-location": "^16.5.2",
     "expo-status-bar": "~1.6.0",
+    "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.72.10",
