--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "expo-cli": "^6.3.10",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
-    "expo-location": "^16.5.2",
+    "expo-location": "~16.1.0",
+    "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
