--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "expo-location": "~16.1.0",
     "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
+    "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "^0.72.10",
     "react-native-fs": "^2.20.0",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-image-picker": "^7.1.0",
     "react-native-maps": "^1.10.0",
