--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-icons/all-files": "^4.1.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -36,6 +37,7 @@
     "react-native-maps": "^1.10.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-web": "^0.19.10",
