--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-icons/all-files": "^4.1.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/datetimepicker": "^7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
