--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/datetimepicker": "^7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.3",
     "expo": "~49.0.15",
